@@ -101,8 +101,9 @@ namespace Avro
         {
             this.SchemaName = name;
             this.aliases = aliases;
-            if (!names.Add(name, this))
-                throw new AvroException("Duplicate schema name " + name.Fullname);
+            if (null != name.Name)  // Added this check for anonymous records inside Message 
+                if (!names.Add(name, this))
+                    throw new AvroException("Duplicate schema name " + name.Fullname);
         }
 
         /// <summary>
